--- a/test/Makefile
+++ b/test/Makefile
@@ -1,10 +1,15 @@
-all: build/test_raw build/test_cap
+FLAGS=-Wno-c++11-extensions
+
+all: build/test_raw build/test_cap build/test_structor
 
 build/test_raw: build
-	g++ -I ../include test_raw.cpp -o build/test_raw
+	g++ $(FLAGS) -I ../include test_raw.cpp -o build/test_raw
 
 build/test_cap: build
-	g++ -I ../include test_cap.cpp -o build/test_cap
+	g++ $(FLAGS) -I ../include test_cap.cpp -o build/test_cap
+
+build/test_structor: build
+	g++ $(FLAGS) -I ../include test_structor.cpp -o build/test_structor
 
 build:
 	mkdir build
